--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/auth": "^1.6.0",
+    "@react-native-firebase/app": "^18.8.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/firebase": "^3.2.1"
   },
   "private": true
 }
