--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.6.0",
-    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/app": "^18.9.0",
+    "@react-native-firebase/firestore": "^18.8.0",
+    "@react-navigation/material-bottom-tabs": "^6.2.22",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
