--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.6.0",
-    "@react-native-firebase/app": "^18.9.0",
-    "@react-native-firebase/firestore": "^18.8.0",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/material-bottom-tabs": "^6.2.22",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.2.1",
-    "expo": "~50.0.7",
+    "expo": "^50.0.7",
+    "expo-av": "~13.10.5",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
