--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@firebase/auth": "^1.6.0",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/firestore": "^19.0.0",
-    "@react-navigation/material-bottom-tabs": "^6.2.22",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/stack": "^6.3.21",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.1",
-    "expo": "^50.0.7",
+    "expo": "^50.0.14",
     "expo-av": "~13.10.5",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
@@ -24,6 +24,8 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
